Update Content on Landing Page

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           </div>
           <div class="col">
             <h4>Bodywork</h4>
-            <p>Provides relief for tight back and shoulder aches especially beneficial for those who do office work.</p>
+            <p>Improves circulation, ease muscle tension and promote relaxation.</p>
             <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#services/bodywork" target="_blank" class="button small">Select</a>
           </div>
         </div>
@@ -154,7 +154,7 @@
           </div>
           <div class="col">
             <h4>Skincare</h4>
-            <p>Provides relief for tight back and shoulder aches especially beneficial for those who do office work.</p>
+            <p>Restore the glow in your skin with a cleanse, exfoliation and moisturizing.</p>
             <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#services/skincare" target="_blank" class="button small">Select</a>
           </div>
         </div>
@@ -168,7 +168,7 @@
           </div>
           <div class="col">
             <h4>Reflexology</h4>
-            <p>Provides relief for tight back and shoulder aches especially beneficial for those who do office work.</p>
+            <p>Alleviate tireness plus improve overall relaxation and wellness.</p>
             <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#services/reflexology" target="_blank" class="button small">Select</a>
           </div>
         </div>
@@ -180,7 +180,7 @@
           </div>
           <div class="col">
             <h4>Fitness</h4>
-            <p>Provides relief for tight back and shoulder aches especially beneficial for those who do office work.</p>
+            <p>Relief for tight back and shoulder aches; especially beneficial for those who do office work.</p>
             <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#services/fitness" target="_blank" class="button small">Select</a>
           </div>
         </div>
@@ -194,7 +194,7 @@
           </div>
           <div class="col">
             <h4>Wellness</h4>
-            <p>Provides relief for tight back and shoulder aches especially beneficial for those who do office work.</p>
+            <p>Improves blood flow, detoxifies, and reduce inches.</p>
             <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#services/wellness" target="_blank" class="button small">Select</a>
           </div>
         </div>
@@ -206,7 +206,7 @@
           </div>
           <div class="col">
             <h4>Acupunture</h4>
-            <p>Provides relief for tight back and shoulder aches especially beneficial for those who do office work.</p>
+            <p>Effective tools for reducing stress, insomnia and pain.</p>
             <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#services/acupuncture" target="_blank" class="button small">Select</a>
           </div>
         </div>
