--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 <section id="about" class="about">
   <div class="container">
     <div class="row">
-      <img src="images/carolina-about.jpg" class="center round" width="300px" height="300px" alt="Carolina Ruiz, LMT">
+      <img src="images/carolina-about.jpg" class="center round wow fadeIn" width="300px" height="300px" alt="Carolina Ruiz, LMT">
       <h2 class="center wow fadeInUp">Carolina Ruiz, LMT</h2>
       <div class="flex-grid">
         <div class="col wow fadeInLeft">
