Update Email Address

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
       <div class="col center wow fadeInUp">
         <h4>PHONE + EMAIL</h4>
         <p><strong>Phone:</strong> (215) 279-3432</p>
-        <p><strong>Email:</strong> @sacredparadisespa.com</p>
+        <p><strong>Email:</strong> carolina@sacredparadisespa.com</p>
       </div>
       <div class="col center wow fadeInRight">
         <h4>Hours</h4>
