--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           </div>
           <div class="col">
             <h4>Reflexology</h4>
-            <p>Alleviate tireness plus improve overall relaxation and wellness.</p>
+            <p>Transfer of energy or 'qi' through the application pressure on distinct areas of the hands and feet linked to different areas of the body to reduce pain and promote overall wellness.</p>
             <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#services/reflexology" target="_blank" class="button small">Select</a>
           </div>
         </div>
@@ -179,8 +179,8 @@
             <img src="images/fitness.jpg" atl="" width="100%" height="240">
           </div>
           <div class="col">
-            <h4>Fitness</h4>
-            <p>Relief for tight back and shoulder aches; especially beneficial for those who do office work.</p>
+            <h4>Stretch Therapy</h4>
+            <p>Great for fitness-lovers and those constantly on the go, releases stiffness in primary muscle groups.</p>
             <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#services/fitness" target="_blank" class="button small">Select</a>
           </div>
         </div>
@@ -193,7 +193,7 @@
             <img src="images/wellness.jpg" atl="" width="100%" height="240">
           </div>
           <div class="col">
-            <h4>Wellness</h4>
+            <h4>Body Contouring</h4>
             <p>Improves blood flow, detoxifies, and reduce inches.</p>
             <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#services/wellness" target="_blank" class="button small">Select</a>
           </div>
