--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@
       <div class="col wow fadeInRight">
         <div class="flex-grid">
           <div class="col">
-            <img src="images/acupunture.jpg" atl="" width="100%" height="240">
+            <img src="images/acupuncture.jpg" atl="" width="100%" height="240">
           </div>
           <div class="col">
-            <h4>Acupunture</h4>
+            <h4>Acupuncture</h4>
             <p>Effective tools for reducing stress, insomnia and pain.</p>
             <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#services/acupuncture" target="_blank" class="button small">Select</a>
           </div>
