Update Content per Client's Request

--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
           <div class="team3"></div>
             <h2 class="center align-bottom">Susan S.</h2>
       </div>
+      <div class="col wow fadeInUp">
+          <div class="team4"></div>
+            <h2 class="center align-bottom">Maria S.</h2>
+      </div>
     </div>
 </section>
 
@@ -141,7 +145,7 @@
             <img src="images/bodywork.jpg" atl="" width="100%" height="240">
           </div>
           <div class="col">
-            <h4>Bodywork</h4>
+            <h4>Customized Bodywork</h4>
             <p>Improves circulation, ease muscle tension and promote relaxation.</p>
             <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#services/bodywork" target="_blank" class="button small">Select</a>
           </div>
@@ -207,6 +211,32 @@
           <div class="col">
             <h4>Acupuncture</h4>
             <p>Effective tools for reducing stress, insomnia and pain.</p>
+            <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#services/acupuncture" target="_blank" class="button small">Select</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="flex-grid">
+      <div class="col wow fadeInLeft">
+        <div class="flex-grid">
+          <div class="col">
+            <img src="images/custom-bodywork.jpg" atl="" width="100%" height="240">
+          </div>
+          <div class="col">
+            <h4>Customized Bodywork</h4>
+            <p>Improves blood flow, detoxifies, and reduce inches.</p>
+            <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#services/bodywork" target="_blank" class="button small">Select</a>
+          </div>
+        </div>
+      </div>
+      <div class="col wow fadeInRight">
+        <div class="flex-grid">
+          <div class="col">
+            <img src="images/cupping.jpg" atl="" width="100%" height="240">
+          </div>
+          <div class="col">
+            <h4>Cupping</h4>
+            <p>Cupping aids in localized pain reduction and muscle relaxation.</p>
             <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#services/acupuncture" target="_blank" class="button small">Select</a>
           </div>
         </div>
