--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
             <img src="images/custom-bodywork.jpg" atl="" width="100%" height="240">
           </div>
           <div class="col">
-            <h4>Customized Bodywork</h4>
-            <p>Improves blood flow, detoxifies, and reduce inches.</p>
-            <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#services/bodywork" target="_blank" class="button small">Select</a>
+            <h4>Cupping</h4>
+            <p>Cupping aids in localized pain reduction and muscle relaxation.</p>
+            <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#services/acupuncture" target="_blank" class="button small">Select</a>
           </div>
         </div>
       </div>
@@ -235,9 +235,9 @@
             <img src="images/cupping.jpg" atl="" width="100%" height="240">
           </div>
           <div class="col">
-            <h4>Cupping</h4>
-            <p>Cupping aids in localized pain reduction and muscle relaxation.</p>
-            <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#services/acupuncture" target="_blank" class="button small">Select</a>
+            <h4>Customer Well Satisified</h4>
+            <p>Improves blood flow, detoxifies, and reduce inches.</p>
+            <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#services/bodywork" target="_blank" class="button small">Select</a>
           </div>
         </div>
       </div>
