--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
           </div>
           <div class="col">
             <h4>Customer Well Satisified</h4>
-            <p>Improves blood flow, detoxifies, and reduce inches.</p>
-            <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#services/bodywork" target="_blank" class="button small">Select</a>
+            <p>Great service and the staff are courteous and knowledgeable.</p>
+            <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#services" target="_blank" class="button small">Select</a>
           </div>
         </div>
       </div>
