--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <!-- Header Content -->
 <header role="banner">
   <div class="row">
-    <a href="#" class="header-logo"><img src="images/sps-logo-white.png" alt="Sacred Paradise Spa Logo" srcset="images/sps-logo-white.svg" height="100%" width="480"></a>
+    <a href="index.html" class="header-logo"><img src="images/sps-logo-white.png" alt="Sacred Paradise Spa Logo" srcset="images/sps-logo-white.svg" height="100%" width="480"></a>
   </div>
 <div class="row">
 <div class="primary-nav">
