Add Meta Descriptions

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <!-- Meta -->
       <meta charset="utf-8">
       <meta http-equiv="x-ua-compatible" content="ie=edge">
-      <meta name="description" content="">
-      <meta name="keywords" content="">
-      <meta name="author" content="">
+      <meta name="description" content="Sacred Paradise Spa Inc is here to provide and offer a more Healthy Lifestyle through Alternative Therapies, Massage, Nutrition, Weight Loss and Wellness.">
+      <meta name="keywords" content="massage,spa,acupuncture,wellness,skincare,reflexology,stretch therapy,body contouring">
+      <meta name="author" content="Sacred Paradise Spa">
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Cache Control -->
@@ -277,7 +277,7 @@
 <section id="map" class="map">
   <div class="flex-grid-full">
     <div class="col google-map">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d381.70882268938016!2d-75.19133455196555!3d40.060451785053466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6c62b472a04f9%3A0xf0bb850a8d1adc03!2sSacred%20Paradise%20Spa!5e0!3m2!1sen!2sus!4v1593552833154!5m2!1sen!2sus" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d381.70882268938016!2d-75.19133455196555!3d40.060451785053466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6c62b472a04f9%3A0xf0bb850a8d1adc03!2sSacred%20Paradise%20Spa!5e0!3m2!1sen!2sus!4v1593552833154!5m2!1sen!2sus" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" alt="Google Map"></iframe>
     </div>
   </div>
 </div>
