Add Animate CSS to Host Server

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- CSS -->
       <link rel="stylesheet" href="css/normalize.css">
       <link rel="stylesheet" href="css/style.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+      <link rel="stylesheet" href="css/animate.min.css">
 
     <!-- js -->
     <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
