--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                     <li class="main-nav-item"><a href="#about">ABOUT</a></li>
                     <li class="main-nav-item"><a href="#wellness">WELLNESS TEAM</a></li>
                     <li class="main-nav-item"><a href="#services-menu">MENU OF SERVICES</a></li>
+                    <li class="main-nav-item"><a href="#intake-form">Intake Form</a></li>
                     <li class="main-nav-item"><a href="#map">LOCATION</a></li>
                     <li class="main-nav-item"><a href="#contact">CONTACT</a></li>
                 </ul>
@@ -242,6 +243,130 @@
         </div>
       </div>
     </div>
+</section>
+<!-- SECTION SERVICES MENU -->
+<section id="intake-form" class="intake-form">
+  <div class="container">
+    <img class="center" src="images/lotus-outline.png" width="80px" height="80px" alt="">
+    <h2 class="center wow bounceIn">Client Intake Form</h2>
+    <div class="row">
+      <!-- Begin Mailchimp Signup Form -->
+      <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+      <style type="text/css">
+      	#mc_embed_signup{clear:left; font:14px}
+        input[type="text"], input[type="email"], input[type="number"] {width: 100%;}
+        #mc_embed_signup .mc-field-group input {
+            font-size: 20px;
+            border: 1px solid #ccc;
+            padding: 10px;
+            border-radius: 5px;
+        }
+        .indicates-required {
+            text-align: right;
+            font-size: 14px;
+        }
+        li {
+            display: inline;
+            margin-right: 20px;
+        }
+        [type=checkbox], [type=radio] {
+            margin-right: 10px;
+        }
+        .mc-field-group {
+            margin: 20px 0;
+        }
+        input#mc-embedded-subscribe {
+            display: block;
+            margin: 80px auto 0;
+            border: none;
+        }
+        #mc_embed_signup .button {
+          color:#fff;
+          font-family:Montserrat,sans-serif;
+          font-size:20px;
+          font-weight:700;
+          line-height:36px;
+          border-radius:10px;
+          margin-bottom:40px;
+          display:block;
+          padding:10px 40px;
+          letter-spacing:.1rem;
+          text-align:center;
+          text-transform:uppercase;
+          text-decoration:none;
+          background-color:#f44336;
+          cursor:pointer;
+          box-sizing:border-box;
+        }
+      </style>
+      <div id="mc_embed_signup">
+      <form action="https://sacredparadisespa.us17.list-manage.com/subscribe/post?u=150cb82c18064635804c056a1&amp;id=55b19ebba6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+          <div id="mc_embed_signup_scroll">
+      <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+      <div class="mc-field-group">
+      	<label for="mce-FNAME">First Name  <span class="asterisk">*</span>
+      </label>
+      	<input type="text" value="" name="FNAME" class="required" id="mce-FNAME">
+      </div>
+      <div class="mc-field-group">
+      	<label for="mce-LNAME">Last Name  <span class="asterisk">*</span>
+      </label>
+      	<input type="text" value="" name="LNAME" class="required" id="mce-LNAME">
+      </div>
+      <div class="mc-field-group">
+      	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+      </label>
+      	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+      </div>
+      <div class="mc-field-group size1of2">
+      	<label for="mce-PHONE">Phone Number </label>
+      	<input type="text" name="PHONE" class="" value="" id="mce-PHONE">
+      </div>
+      <div class="mc-field-group size1of2">
+      	<label for="mce-AGE">Age </label>
+      	<input type="number" name="AGE" class="" value="" id="mce-AGE">
+      </div>
+      <div class="mc-field-group">
+      	<label for="mce-ALLERGIES">Any Allergies? </label>
+      	<input type="text" value="" name="ALLERGIES" class="" id="mce-ALLERGIES">
+      </div>
+      <div class="mc-field-group">
+      	<label for="mce-INJURIES">Prior Injuries </label>
+      	<input type="text" value="" name="INJURIES" class="" id="mce-INJURIES">
+      </div>
+      <div class="mc-field-group">
+      	<label for="mce-HEALTH_CON">Health Conditions </label>
+      	<input type="text" value="" name="HEALTH_CON" class="" id="mce-HEALTH_CON">
+      </div>
+      <div class="mc-field-group">
+      	<label for="mce-HEARABOUT">How did you hear about us? </label>
+      	<input type="text" value="" name="HEARABOUT" class="" id="mce-HEARABOUT">
+      </div>
+      <div class="mc-field-group input-group">
+          <strong>Have you ever had a professional massage before? </strong>
+          <ul><li><input type="checkbox" value="1" name="group[156586][1]" id="mce-group[156586]-156586-0"><label for="mce-group[156586]-156586-0">Yes</label></li>
+      <li><input type="checkbox" value="2" name="group[156586][2]" id="mce-group[156586]-156586-1"><label for="mce-group[156586]-156586-1">No</label></li>
+      </ul>
+      </div>
+      <div class="mc-field-group input-group">
+          <strong>Have you had COVID-19? </strong>
+          <ul><li><input type="checkbox" value="4" name="group[156590][4]" id="mce-group[156590]-156590-0"><label for="mce-group[156590]-156590-0">Yes</label></li>
+      <li><input type="checkbox" value="8" name="group[156590][8]" id="mce-group[156590]-156590-1"><label for="mce-group[156590]-156590-1">No</label></li>
+      </ul>
+      </div>
+      	<div id="mce-responses" class="clear">
+      		<div class="response" id="mce-error-response" style="display:none"></div>
+      		<div class="response" id="mce-success-response" style="display:none"></div>
+      	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_150cb82c18064635804c056a1_55b19ebba6" tabindex="-1" value=""></div>
+          <div class="clear"><input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+          </div>
+      </form>
+      </div>
+      <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[6]='AGE';ftypes[6]='number';fnames[5]='ALLERGIES';ftypes[5]='text';fnames[7]='INJURIES';ftypes[7]='text';fnames[8]='HEALTH_CON';ftypes[8]='text';fnames[9]='HEARABOUT';ftypes[9]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+      <!--End mc_embed_signup-->
+    </div>
+  </div>
 </section>
 
 <!-- SECTION BOOK APPOINTMENT -->
