--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!-- Google Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 
 </head>
 <body id="top">
@@ -343,13 +343,13 @@
       	<input type="text" value="" name="HEARABOUT" class="" id="mce-HEARABOUT">
       </div>
       <div class="mc-field-group input-group">
-          <strong>Have you ever had a professional massage before? </strong>
+          <p>Have you ever had a professional massage before? </p>
           <ul><li><input type="checkbox" value="1" name="group[156586][1]" id="mce-group[156586]-156586-0"><label for="mce-group[156586]-156586-0">Yes</label></li>
       <li><input type="checkbox" value="2" name="group[156586][2]" id="mce-group[156586]-156586-1"><label for="mce-group[156586]-156586-1">No</label></li>
       </ul>
       </div>
       <div class="mc-field-group input-group">
-          <strong>Have you had COVID-19? </strong>
+          <p>Have you had COVID-19? </p>
           <ul><li><input type="checkbox" value="4" name="group[156590][4]" id="mce-group[156590]-156590-0"><label for="mce-group[156590]-156590-0">Yes</label></li>
       <li><input type="checkbox" value="8" name="group[156590][8]" id="mce-group[156590]-156590-1"><label for="mce-group[156590]-156590-1">No</label></li>
       </ul>
