--- a/index.html
+++ b/index.html
@@ -343,13 +343,13 @@
       	<input type="text" value="" name="HEARABOUT" class="" id="mce-HEARABOUT">
       </div>
       <div class="mc-field-group input-group">
-          <p>Have you ever had a professional massage before? </p>
+          <label>Have you ever had a professional massage before?</label>
           <ul><li><input type="checkbox" value="1" name="group[156586][1]" id="mce-group[156586]-156586-0"><label for="mce-group[156586]-156586-0">Yes</label></li>
       <li><input type="checkbox" value="2" name="group[156586][2]" id="mce-group[156586]-156586-1"><label for="mce-group[156586]-156586-1">No</label></li>
       </ul>
       </div>
       <div class="mc-field-group input-group">
-          <p>Have you had COVID-19? </p>
+          <label>Have you had COVID-19?</label>
           <ul><li><input type="checkbox" value="4" name="group[156590][4]" id="mce-group[156590]-156590-0"><label for="mce-group[156590]-156590-0">Yes</label></li>
       <li><input type="checkbox" value="8" name="group[156590][8]" id="mce-group[156590]-156590-1"><label for="mce-group[156590]-156590-1">No</label></li>
       </ul>
