--- a/index.html
+++ b/index.html
@@ -298,6 +298,9 @@
           cursor:pointer;
           box-sizing:border-box;
         }
+        .asterisk {
+            color: red;
+        }
       </style>
       <div id="mc_embed_signup">
       <form action="https://sacredparadisespa.us17.list-manage.com/subscribe/post?u=150cb82c18064635804c056a1&amp;id=55b19ebba6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
