--- a/index.html
+++ b/index.html
@@ -289,7 +289,6 @@
           border-radius:10px;
           margin-bottom:40px;
           display:block;
-          padding:10px 40px;
           letter-spacing:.1rem;
           text-align:center;
           text-transform:uppercase;
@@ -297,6 +296,7 @@
           background-color:#f44336;
           cursor:pointer;
           box-sizing:border-box;
+          height:40px;
         }
         .asterisk {
             color: red;
