--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         #mc_embed_signup .button {
           color:#fff;
           font-family:Montserrat,sans-serif;
-          font-size:20px;
+          font-size:18px;
           font-weight:700;
           line-height:36px;
           border-radius:10px;
@@ -297,6 +297,7 @@
           cursor:pointer;
           box-sizing:border-box;
           height:40px;
+          padding:0px 40px;
         }
         .asterisk {
             color: red;
