--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               <li>Health Savings Account</li>
               <li>Flex Spending Account</li>
               <li>Workers Compensation Insurance</li>
-              <li>Auto insurance</li>
+              <li>Auto Insurance</li>
           </ul>
           </h3>
         </div>
