--- a/index.html
+++ b/index.html
@@ -134,6 +134,38 @@
     </div>
 </section>
 
+
+<!-- SECTION CONTACT  -->
+<section id="contact" class="contact">
+  <div class="container">
+      <h1 class="center">We Have Various Payment Options for Our Clients</h1>
+      <div class="flex-grid-thirds">
+        <div class="col wow fadeIn">
+          <h3>With our facility being an essential business, our loyal customers payment options their for fitness & alternative therapies.</h3>
+        </div>
+        <div class="col wow fadeIn">
+          <h3>
+            <strong>Sacred Paradise Spa</strong>
+            <ul>
+              <li>NPI 1285997809</li>
+              <li>Taxonomy Code 225700000X</li>
+              <li>Medical Massage MSG005498</li>
+            </ul>
+          </h3>
+        </div>
+        <div class="col wow fadeIn">
+          <h3>
+            <strong>We are Currently Accepting</strong>
+            <ul>
+              <li>Health Savings Account</li>
+              <li>Flex Spending Account</li>
+          </ul>
+          </h3>
+        </div>
+      </div>
+    </div>
+</section>
+
 <!-- SECTION SERVICES MENU -->
 <section id="services-menu" class="services-menu">
   <div class="container">
