--- a/index.html
+++ b/index.html
@@ -448,10 +448,16 @@
   <div class="container">
     <div class="flex-grid">
       <div class="col center wow fadeInLeft">
-        <h4>SPA LOCATION</h4>
+        <h4>SPA LOCATION 1</h4>
         <p>7203 Germantown Avenue<br />
-        Philadelphia, PA 19119<br />
-        License: #718166</p>
+          Philadelphia, PA 19119<br />
+          License: #718166</p>
+
+      </div>
+      <div class="col center wow fadeInDown">
+        <h4>SPA LOCATION 2</h4>
+        <p>49 Easton Road - Suite 202<br />
+          Willow Grove, PA 19090</p>
 
       </div>
       <div class="col center wow fadeInUp">
