--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
             <ul class="slideout-nav" role="navigation">
                 <li class="slideout-nav-item"><a href="index.html">HOME</a></li>
                 <li class="slideout-nav-item"><a href="#about">ABOUT</a></li>
-                <li class="main-nav-item"><a href="#ethics">ETHICS</a></li>
+                <li class="slideout-nav-item"><a href="#ethics">ETHICS</a></li>
                 <li class="slideout-nav-item"><a href="#wellness">WELLNESS TEAM</a></li>
                 <li class="slideout-nav-item"><a href="#services-menu">MENU OF SERVICES</a></li>
-                <li class="main-nav-item"><a href="#intake-form">Intake Form</a></li>
+                <li class="slideout-nav-item"><a href="#intake-form">Intake Form</a></li>
                 <li class="slideout-nav-item"><a href="#map">LOCATION</a></li>
                 <li class="slideout-nav-item"><a href="#contact">CONTACT</a></li>
             </ul>
