--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <div class="secondary-nav">
     <div class="row">
         <a href="index.html" class="header-logo-2"><img src="images/sps-logo-white.png" alt="Sacred Paradise Spa
-          Logo" srcset="images/sps-logo-white.svg" height="100" width="100%"></a>
+          Logo"  height="100" width="100%"></a>
     </div>
     <div class="row">
         <div id="toggle">
@@ -482,7 +482,7 @@
 <!-- SECTION FOOTER  -->
 <section id="footer" class="footer">
   <div class="container">
-      <p class="copyright">©2020 Sacred Paradise Spa  |  Built by designismylife</p>
+      <p class="copyright">©2021 Sacred Paradise Spa  |  Built by designismylife</p>
     <div class="scrollToTop"><a href="#top" role="button">╱╲</a></div>
   </div>
 </section>
