Add Ethics Section

--- a/index.html
+++ b/index.html
@@ -446,6 +446,46 @@
   </div>
 </div>
 
+<!-- SECTION ETHICS -->
+<section id="ethics" class="ethics">
+  <div class="container">
+    <img class="center wow bounceIn " src="images/lotus-outline.png" width="80px" height="80px" alt="">
+    <div class="flex-grid">
+      <div class="col">
+          <p><strong>Ethics</strong><br/>
+          All services are for therapeutic purposes only. Please do not contact Sacred paradise Spa if you are seeking any kind of illegal/inappropriate sexual or erotic/sensual services. Sexual advances will not be tolerated at our spa. Any inappropriate behaviors will result in the immediate termination of the services. Clients and staff are not allowed to exchange personal information of any kind with one another. If you have any questions please contact spa directly.</p>
+
+          <p><strong>Guests</strong><br/>
+          No children or extra guests are allowed at the spa.</p>
+
+          <p><strong>Cell phone</strong><br/>
+          Use of a cellphone is not permitted within the spa in order to keep noise levels to a minimum.</p>
+
+          <p><strong>Gratuity</strong><br/>
+            A <strong>gratuity</strong> is not included unless otherwise stated. In appreciation of outstanding services, gratuities may be given at your discretion at the front desk (typical range: 15-20%).</p>
+
+          <p>Cash gratuity, is welcomed and appreciated by all of our wellness practitioners. You can put tips in the therapist envelope(s) located on the front desk.</p>
+      </div>
+      <div class="col">
+        <p><strong>Cancellation</strong><br/>
+          We require <strong>24 hours notice</strong> to cancel, or we will have to charge you the full price of your services. <strong>We can not accept same day cancellations.</strong> All canceled appointments should be canceled by phone. We do not accept emails for appointment cancellation.</p>
+
+        <p>There is no refund on prepaid appointments.</p>
+
+        <p>In the event of a no call/no show, the cost of your <strong>FULL SESSION</strong> will not be refundable.</p>
+
+        <p><strong>Scheduling</strong><br/>
+        Massage and services are scheduled by appointment only.</p>
+        <p>All appointments must be booked on our online portal. Appointments will not be made or scheduled over the phone and will only be accepted via the online portal, no exceptions.</p>
+
+        <p>Should you arrive late, your appointment may be shortened to accommodate other guest(s) who have an appointment. Late arrival over 10 minutes may result in cancellation of your appointment.</p>
+
+        <p>Due to COVID restrictions, please arrive at your appointment on time. We are operating by appointments and are limiting the amount of guest(s) inside the facility to keep everyone safe.</p>
+      </div>
+  </div>
+</div>
+</section>
+
 <!-- SECTION CONTACT  -->
 <section id="contact" class="contact">
   <div class="container">
