--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
     <div class="flex-grid">
       <div class="col">
           <p><strong>Ethics</strong><br/>
-          All services are for therapeutic purposes only. Please do not contact Sacred paradise Spa if you are seeking any kind of illegal/inappropriate sexual or erotic/sensual services. Sexual advances will not be tolerated at our spa. Any inappropriate behaviors will result in the immediate termination of the services. Clients and staff are not allowed to exchange personal information of any kind with one another. If you have any questions please contact spa directly.</p>
+          All services are for therapeutic purposes only. Please do not contact Sacred Paradise Spa if you are seeking any kind of illegal/inappropriate sexual or erotic/sensual services. Sexual advances will not be tolerated at our spa. Any inappropriate behaviors will result in the immediate termination of the services. Clients and staff are not allowed to exchange personal information of any kind with one another. If you have any questions please contact spa directly.</p>
 
           <p><strong>Guests</strong><br/>
           No children or extra guests are allowed at the spa.</p>
