--- a/index.html
+++ b/index.html
@@ -439,9 +439,12 @@
 
 <!-- SECTION MAP  -->
 <section id="map" class="map">
-  <div class="flex-grid-full">
+  <div class="flex-grid">
     <div class="col google-map">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d381.70882268938016!2d-75.19133455196555!3d40.060451785053466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6c62b472a04f9%3A0xf0bb850a8d1adc03!2sSacred%20Paradise%20Spa!5e0!3m2!1sen!2sus!4v1593552833154!5m2!1sen!2sus" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" alt="Google Map"></iframe>
+    </div>
+    <div class="col google-map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d762.4983875749!2d-75.11640767075427!3d40.1424273987124!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6b031c7f429ef%3A0xc8c03041e72cbd92!2s49%20Easton%20Rd%2C%20Willow%20Grove%2C%20PA%2019090!5e0!3m2!1sen!2sus!4v1636414026822!5m2!1sen!2sus" width="100%" height="100%" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" alt="Google Map"></iframe>
     </div>
   </div>
 </div>
