--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
 <!-- SECTION FOOTER  -->
 <section id="footer" class="footer">
   <div class="container">
-      <p class="copyright">©2021 Sacred Paradise Spa  |  Built by designismylife</p>
+      <p class="copyright">© <script type="text/javascript">document.write( new Date().getFullYear() );</script> Sacred Paradise Spa  |  Built by designismylife</p>
     <div class="scrollToTop"><a href="#top" role="button">╱╲</a></div>
   </div>
 </section>
