Update Scroll to Top Icon

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
     <script type="text/javascript" src="js/deznx.js"></script>
     <script type="text/javascript" src="js/wow.min.js"></script>
+    <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
 
     <!-- Favicon-->
     <link rel="icon" type="image/png" href="images/favicon.png">
@@ -526,7 +527,7 @@
 <section id="footer" class="footer">
   <div class="container">
       <p class="copyright">© <script type="text/javascript">document.write( new Date().getFullYear() );</script> Sacred Paradise Spa  |  Built by designismylife</p>
-    <div class="scrollToTop"><a href="#top" role="button">╱╲</a></div>
+    <div class="scrollToTop"><a href="#top" role="button" aria-hidden="true"><span class="iconify" data-icon="dashicons:arrow-up-alt2"></span></a></div>
   </div>
 </section>
   <script>
