Add location button + alt content

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <section id="hero" class="hero">
   <div class="hero-image"></div>
   <div class="hero-content"><h1>We're Your Oasis Of Relaxation</h1>
-    <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa" target="_blank" rel="noopener" class="button">BOOK NOW</a>
+    <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa" target="_blank" rel="noopener" class="button">PHILADELPHIA BOOK NOW</a>&nbsp;&nbsp;<a href="https://www.massagebook.com/biz/sacred-paradise-spa-willow-grove" target="_blank" rel="noopener" class="button">WILLOW GROVE BOOK NOW</a>
   </div>
 </section>
 
@@ -179,7 +179,7 @@
       <div class="col wow fadeInLeft">
         <div class="flex-grid">
           <div class="col">
-            <img src="images/bodywork.jpg" atl="" width="100%" height="240">
+            <img src="images/bodywork.jpg" atl="bodywork" width="100%" height="240">
           </div>
           <div class="col">
             <h4>Customized Bodywork</h4>
@@ -191,7 +191,7 @@
       <div class="col wow fadeInRight">
         <div class="flex-grid">
           <div class="col">
-            <img src="images/skincare.jpg" atl="" width="100%" height="240">
+            <img src="images/skincare.jpg" atl="skincare" width="100%" height="240">
           </div>
           <div class="col">
             <h4>Skincare</h4>
@@ -205,7 +205,7 @@
       <div class="col wow fadeInLeft">
         <div class="flex-grid">
           <div class="col">
-            <img src="images/reflexology.jpg" atl="" width="100%" height="240">
+            <img src="images/reflexology.jpg" atl="reflexology" width="100%" height="240">
           </div>
           <div class="col">
             <h4>Reflexology</h4>
@@ -217,7 +217,7 @@
       <div class="col wow fadeInRight">
         <div class="flex-grid">
           <div class="col">
-            <img src="images/fitness.jpg" atl="" width="100%" height="240">
+            <img src="images/fitness.jpg" atl="fitness" width="100%" height="240">
           </div>
           <div class="col">
             <h4>Stretch Therapy</h4>
@@ -231,7 +231,7 @@
       <div class="col wow fadeInLeft">
         <div class="flex-grid">
           <div class="col">
-            <img src="images/wellness.jpg" atl="" width="100%" height="240">
+            <img src="images/wellness.jpg" atl="wellness" width="100%" height="240">
           </div>
           <div class="col">
             <h4>Body Contouring</h4>
@@ -243,7 +243,7 @@
       <div class="col wow fadeInRight">
         <div class="flex-grid">
           <div class="col">
-            <img src="images/acupuncture.jpg" atl="" width="100%" height="240">
+            <img src="images/acupuncture.jpg" atl="acupunture" width="100%" height="240">
           </div>
           <div class="col">
             <h4>Acupuncture</h4>
@@ -257,7 +257,7 @@
       <div class="col wow fadeInLeft">
         <div class="flex-grid">
           <div class="col">
-            <img src="images/cupping.jpg" atl="" width="100%" height="240">
+            <img src="images/cupping.jpg" atl="cupping" width="100%" height="240">
           </div>
           <div class="col">
             <h4>Cupping</h4>
@@ -269,7 +269,7 @@
       <div class="col wow fadeInRight">
         <div class="flex-grid">
           <div class="col">
-            <img src="images/custom-bodywork.jpg" atl="" width="100%" height="240">
+            <img src="images/custom-bodywork.jpg" atl="custom bodywork" width="100%" height="240">
           </div>
           <div class="col">
             <h4>Customer Well Satisfied</h4>
@@ -283,7 +283,7 @@
 <!-- SECTION SERVICES MENU -->
 <section id="intake-form" class="intake-form">
   <div class="container">
-    <img class="center" src="images/lotus-outline.png" width="80px" height="80px" alt="">
+    <img class="center" src="images/lotus-outline.png" width="80px" height="80px" alt="lotus flower">
     <h2 class="center wow bounceIn">Client Intake Form</h2>
     <div class="row">
       <!-- Begin Mailchimp Signup Form -->
@@ -410,11 +410,11 @@
 </section>
 
 <!-- SECTION BOOK APPOINTMENT -->
-<section id="book-now" class="book-now-2">
+<section id="book-now" class="book-now">
   <div class="container">
     <div class="row center wow fadeInUp">
       <h1>Book Online Today</h1>
-      <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa" target="_blank" rel="noopener" class="button">BOOK NOW</a>
+      <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa" target="_blank" rel="noopener" class="button">PHILADELPHIA BOOK NOW</a>&nbsp;&nbsp;<a href="https://www.massagebook.com/biz/sacred-paradise-spa-willow-grove" target="_blank" rel="noopener" class="button">WILLOW GROVE BOOK NOW</a>
     </div>
   </div>
 </section>
@@ -433,7 +433,6 @@
           <p>In addition to providing on-going training and development Sacred Paradise is proud to provide its team members a comfortable living wage – nearly twice the average hourly rate paid at some national massage chains. We accept cash, credit/debit cards, as well as HSA & FSA benefits. As a multi-cultural facility, we speak: English, Spanish, Portuguese and Italian.</p>
         </div>
       </div>
-
     </div>
   </div>
 </section>
@@ -453,7 +452,7 @@
 <!-- SECTION ETHICS -->
 <section id="ethics" class="ethics">
   <div class="container">
-    <img class="center wow bounceIn " src="images/lotus-outline.png" width="80px" height="80px" alt="">
+    <img class="center wow bounceIn " src="images/lotus-outline.png" width="80px" height="80px" alt="lotus flower">
     <div class="flex-grid">
       <div class="col">
           <p><strong>Ethics</strong><br/>
