--- a/index.html
+++ b/index.html
@@ -503,7 +503,10 @@
       <div class="col center wow fadeInDown">
         <h4>SPA LOCATION 2</h4>
         <p>49 Easton Road - Suite 202<br />
-          Willow Grove, PA 19090</p>
+          Willow Grove, PA 19090<br />
+          Rear entrance in <br />Willow Grove Square<br />
+          <strong>(Closed on Monday)</strong>
+        </p>
 
       </div>
       <div class="col center wow fadeInUp">
