--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
             <h1>We're Your Oasis Of Relaxation</h1>
             <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa" target="_blank" rel="noopener"
                 class="button">PHILADELPHIA BOOK NOW</a>
-            <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#gift-certificates"
-                target="_blank" rel="noopener" class="button">PH GIFT CERTIFICATES</a>
+            <a href="https://www.massagebook.com/therapists/SacredParadiseSpa/gift-certificates" target="_blank"
+                rel="noopener" class="button">PH GIFT CERTIFICATES</a>
             <a href="https://www.massagebook.com/biz/sacred-paradise-spa-willow-grove" target="_blank" rel="noopener"
                 class="button">WILLOW GROVE BOOK NOW</a>
             <a href="https://www.massagebook.com/Willow_Grove~Massage~sacred-paradise-spa-willow-grove?src=external#gift-certificates"
@@ -487,8 +487,8 @@
             <h1>Book Online Today</h1>
             <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa" target="_blank" rel="noopener"
                 class="button">PHILADELPHIA BOOK NOW</a>
-            <a href="https://www.massagebook.com/Philadelphia~Massage~SacredParadiseSpa#gift-certificates"
-                target="_blank" rel="noopener" class="button">PH GIFT CERTIFICATES</a>
+            <a href="https://www.massagebook.com/therapists/SacredParadiseSpa/gift-certificates" target="_blank"
+                rel="noopener" class="button">PH GIFT CERTIFICATES</a>
             <a href="https://www.massagebook.com/biz/sacred-paradise-spa-willow-grove" target="_blank" rel="noopener"
                 class="button">WILLOW GROVE BOOK NOW</a>
             <a href="https://www.massagebook.com/Willow_Grove~Massage~sacred-paradise-spa-willow-grove?src=external#gift-certificates"
