--- a/index.html
+++ b/index.html
@@ -107,10 +107,6 @@
                 class="button">PHILADELPHIA BOOK NOW</a>
             <a href="https://www.massagebook.com/therapists/SacredParadiseSpa/gift-certificates" target="_blank"
                 rel="noopener" class="button">PH GIFT CERTIFICATES</a>
-            <a href="https://www.massagebook.com/biz/sacred-paradise-spa-willow-grove" target="_blank" rel="noopener"
-                class="button">WILLOW GROVE BOOK NOW</a>
-            <a href="https://www.massagebook.com/Willow_Grove~Massage~sacred-paradise-spa-willow-grove?src=external#gift-certificates"
-                target="_blank" rel="noopener" class="button">WG GIFT CERTIFICATES</a>
         </div>
     </section>
 
@@ -489,10 +485,6 @@
                 class="button">PHILADELPHIA BOOK NOW</a>
             <a href="https://www.massagebook.com/therapists/SacredParadiseSpa/gift-certificates" target="_blank"
                 rel="noopener" class="button">PH GIFT CERTIFICATES</a>
-            <a href="https://www.massagebook.com/biz/sacred-paradise-spa-willow-grove" target="_blank" rel="noopener"
-                class="button">WILLOW GROVE BOOK NOW</a>
-            <a href="https://www.massagebook.com/Willow_Grove~Massage~sacred-paradise-spa-willow-grove?src=external#gift-certificates"
-                target="_blank" rel="noopener" class="button">WG GIFT CERTIFICATES</a>
         </div>
 
     </section>
@@ -528,16 +520,10 @@
     <section id="map" class="map">
         <div class="flex-grid">
             <div class="col google-map">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d381.70882268938016!2d-75.19133455196555!3d40.060451785053466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6c62b472a04f9%3A0xf0bb850a8d1adc03!2sSacred%20Paradise%20Spa!5e0!3m2!1sen!2sus!4v1593552833154!5m2!1sen!2sus"
-                    width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
-                    tabindex="0" alt="Google Map"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3053.6701429151512!2d-75.19353722318054!3d40.060461571499204!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6b9a318b4c945%3A0xb2aed9be98bf9697!2s7203%20Germantown%20Ave%2C%20Philadelphia%2C%20PA%2019119%2C%20USA!5e0!3m2!1sen!2s!4v1712341516806!5m2!1sen!2s" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="col google-map">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d762.4983875749!2d-75.11640767075427!3d40.1424273987124!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6b031c7f429ef%3A0xc8c03041e72cbd92!2s49%20Easton%20Rd%2C%20Willow%20Grove%2C%20PA%2019090!5e0!3m2!1sen!2sus!4v1636414026822!5m2!1sen!2sus"
-                    width="100%" height="100%" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"
-                    alt="Google Map"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3053.6657239464175!2d-75.1940799231806!3d40.0605601714992!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6b9a31b3d587d%3A0x48c99e9023ba2d49!2s7224%20Germantown%20Ave%2C%20Philadelphia%2C%20PA%2019119%2C%20USA!5e0!3m2!1sen!2s!4v1712341450128!5m2!1sen!2s" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
         </div>
@@ -614,10 +600,9 @@
                     </div>
                     <div class="col center wow fadeInDown">
                         <h4>SPA LOCATION 2</h4>
-                        <p>49 Easton Road - Suite 202<br />
-                            Willow Grove, PA 19090<br />
-                            Rear entrance in <br />Willow Grove Square<br />
-                            <strong>(Closed on Monday)</strong>
+                        <p>7224 Germantown Avenue<br />
+                            Philadelphia, PA 19119<br />
+                            <strong>By appointment only.</strong>
                         </p>
 
                     </div>
